package Alachisoft.NCache.Common.Protobuf;

message ContainsBulkCommand {

	repeated string keys = 1;
	optional int64 requestId = 2;
	optional int32 MethodOverload = 3 [default=0];	
}